--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,8 @@
 @import "./layout/team";
 @import "./layout/clients";
 @import "./layout/footer";
-@import "./layout/footer";
+@import "./layout/footer-logo";
 @import "./layout/footer-social";
-@import "./layout/filters-portfolio";
-@import "./layout/project-portfolio";
+@import "./layout/filters";
+@import "./layout/project";
 @import "./layout/futer-form";
