--- a/css/main.css
+++ b/css/main.css
@@ -452,11 +452,6 @@ body {
   color: var(--first-backlight-color);
 }
 
-.contacts__icon {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
 .contacts {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -471,6 +466,11 @@ body {
 
 .contacts .contacts__item + .contacts__item {
   margin-left: 50px;
+}
+
+.contacts__icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
 
 .hero {
@@ -538,11 +538,11 @@ body {
   color: var(--headers-dark-color);
 }
 
-.conditions__list .conditions__item + .conditions__item {
+.conditions .conditions__list .conditions__item + .conditions__item {
   margin-left: 30px;
 }
 
-.conditions__icon {
+.conditions .conditions__icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -646,29 +646,33 @@ body {
   background: var(--background-filters-button);
 }
 
-.team {
-  text-align: center;
-}
-
-.team__header {
+.team-header {
   font-weight: var(--font-weight-bold);
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 
-.team__list {
+.team {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 50px;
 }
 
-.team__list .team__card + .team__card {
+.team .team__card + .team__card {
   margin-left: 30px;
 }
 
-.team__border {
+.team__card {
+  background: var(--second-backlight-color);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.person--border {
   border-top-style: none;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -685,13 +689,6 @@ body {
   letter-spacing: 0.03em;
 }
 
-.team__card {
-  background: var(--second-backlight-color);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
 .person__profession {
   font-size: 16px;
   line-height: 1.19;
@@ -701,7 +698,7 @@ body {
   color: var(--text-color);
 }
 
-.person__social__list {
+.person__social-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -711,7 +708,15 @@ body {
   margin-top: 16px;
 }
 
-.person__social__link {
+.person__social-icon {
+  fill: currentColor;
+}
+
+.person__social-item + .person__social-item {
+  margin-left: 10px;
+}
+
+.person__social-link {
   width: 44px;
   height: 44px;
   background-color: var(--second-backlight-color);
@@ -734,28 +739,13 @@ body {
           transition-timing-function: var(--function-hover-focus);
 }
 
-.person__social__link:hover, .person__social__link:focus {
+.person__social-link:hover, .person__social-link:focus {
   background-color: var(--first-backlight-color);
   color: var(--second-backlight-color);
 }
 
-.person__social__icon {
-  fill: currentColor;
-}
-
-.person__social__item + .person__social__item {
-  margin-left: 10px;
-}
-
 .clients {
   text-align: center;
-}
-
-.clients__header {
-  font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
 }
 
 .clients__list {
@@ -768,8 +758,19 @@ body {
   margin-top: 50px;
 }
 
+.clients__header {
+  font-weight: var(--font-weight-bold);
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+
 .clients__item + .clients__item {
   margin-left: 30px;
+}
+
+.clients__icon {
+  fill: currentColor;
 }
 
 .clients__link {
@@ -801,31 +802,8 @@ body {
   color: var(--first-backlight-color);
 }
 
-.clients__link .clients__icon {
-  fill: currentColor;
-}
-
 .footer {
   background-color: var(--background-color);
-}
-
-.footer-logo {
-  display: inline-block;
-  font-family: Raleway;
-  font-weight: var(--font-weight-bold);
-  font-size: 26px;
-  line-height: 1.19;
-  padding-top: 0px;
-  margin-bottom: 20px;
-  color: var(--first-backlight-color);
-}
-
-.footer-logo__White {
-  font-family: Raleway;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--text-white-color);
 }
 
 .address {
@@ -836,34 +814,12 @@ body {
   color: var(--text-white-color);
 }
 
-.adress__item {
+.address__item {
   margin-top: 9px;
 }
 
-.adress__list :first-child {
+.address__list :first-child {
   margin-top: 0px;
-}
-
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  line-height: 1.19;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  color: var(--text-white-color);
-}
-
-.footer-contacts {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .address__link {
@@ -896,12 +852,49 @@ body {
   color: var(--first-backlight-color);
 }
 
-.footer-social {
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  line-height: 1.19;
+  padding-top: 60px;
+  padding-bottom: 60px;
   color: var(--text-white-color);
 }
 
-.footer-social-wrap {
-  margin-left: 70px;
+.footer-contacts {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.footer-logo {
+  display: inline-block;
+  font-family: Raleway;
+  font-weight: var(--font-weight-bold);
+  font-size: 26px;
+  line-height: 1.19;
+  padding-top: 0px;
+  margin-bottom: 20px;
+  color: var(--first-backlight-color);
+}
+
+.footer-logo__White {
+  font-family: Raleway;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--text-white-color);
+}
+
+.footer-social {
+  color: var(--text-white-color);
 }
 
 .footer-social__list {
@@ -912,6 +905,22 @@ body {
 
 .footer-social__icon {
   fill: var(--second-backlight-color);
+}
+
+.footer-social__item + .footer-social__item {
+  margin-left: 10px;
+}
+
+.footer-social__header {
+  font-weight: var(--font-weight-bold);
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer-social-wrap {
+  margin-left: 70px;
 }
 
 .footer-social__link {
@@ -940,20 +949,17 @@ body {
   background-color: var(--first-backlight-color);
 }
 
-.footer-social__item + .footer-social__item {
-  margin-left: 10px;
-}
-
-.footer-social__header {
-  font-weight: var(--font-weight-bold);
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
 .filters {
   font-size: 16px;
+}
+
+.filters__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .filters__list {
@@ -999,7 +1005,7 @@ body {
           box-shadow: 0px 3px 1px 0px #0000001a;
 }
 
-.container__project__list {
+.project {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1008,18 +1014,18 @@ body {
   margin-top: 50px;
 }
 
-.container__project__item {
+.project__item {
   margin-top: 30px;
   width: 370px;
   margin-right: 30px;
 }
 
-.container__project__wrap {
+.project__wrap {
   position: relative;
   overflow: hidden;
 }
 
-.container__project__text-imj {
+.project__text-imj {
   position: absolute;
   top: 0;
   left: 0;
@@ -1039,7 +1045,41 @@ body {
   overflow: auto;
 }
 
-.container__project__link {
+.project__item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.project__item:nth-child(-n + 3) {
+  margin-top: 0px;
+}
+
+.project__container {
+  padding-top: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  background: var(--second-backlight-color);
+  border: 1px solid #eeeeee;
+  border-top-style: none;
+}
+
+.project__titl {
+  font-weight: var(--font-weight-bold);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+  color: var(--headers-dark-color);
+}
+
+.project__text {
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
+.project__link {
   display: block;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
@@ -1051,49 +1091,15 @@ body {
           transition-timing-function: var(--function-hover-focus);
 }
 
-.container__project__link:focus,
-.container__project__link:hover .container__project__text-imj {
+.project__link:focus,
+.project__link:hover .project__text-imj {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
 
-.container__project__link:hover, .container__project__link:focus {
+.project__link:hover, .project__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.container__project__item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.container__project__item:nth-child(-n + 3) {
-  margin-top: 0px;
-}
-
-.container__project__container {
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 20px;
-  background: var(--second-backlight-color);
-  border: 1px solid #eeeeee;
-  border-top-style: none;
-}
-
-.container__project__titl {
-  font-weight: var(--font-weight-bold);
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-  color: var(--headers-dark-color);
-}
-
-.container__project__text {
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
 }
 
 .footer-form-wrap {
@@ -1104,7 +1110,7 @@ body {
   color: var(--text-white-color);
 }
 
-.footer-form__header {
+.footer-form .footer-form__header {
   font-weight: var(--font-weight-bold);
   line-height: 16px;
   letter-spacing: 0.03em;
@@ -1112,7 +1118,7 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-form__list {
+.footer-form .footer-form__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1120,7 +1126,7 @@ body {
   line-height: 20px;
 }
 
-.footer-form__imail {
+.footer-form .footer-form__imail {
   width: 358px;
   height: 50px;
   padding-left: 16px;
@@ -1132,6 +1138,12 @@ body {
   border-radius: 4px;
   background: #2f303a;
   color: #ffffff;
+}
+
+.footer-form .futer-form__icon {
+  right: 28px;
+  top: 13px;
+  margin-left: 12px;
 }
 
 .futer-form__button {
@@ -1168,11 +1180,5 @@ body {
 
 .futer-form__button:focus, .futer-form__button:hover {
   background: var(--btn-fokus);
-}
-
-.futer-form__icon {
-  right: 28px;
-  top: 13px;
-  margin-left: 12px;
 }
 /*# sourceMappingURL=main.css.map */
