--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -41,10 +41,7 @@
     color: var(--first-backlight-color);
   }
 }
-.contacts__icon {
-  fill: currentColor;
-  margin-right: 10px;
-}
+
 .contacts {
   display: flex;
   margin-left: auto;
@@ -54,5 +51,9 @@
   }
   & &__item + &__item {
     margin-left: 50px;
+  }
+  &__icon {
+    fill: currentColor;
+    margin-right: 10px;
   }
 }
