--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,56 +1,60 @@
 .sections-bg {
   background: var(--background-filters-button);
 }
-.team {
-  text-align: center;
-}
-.team__header {
+.team-header {
   font-weight: var(--font-weight-bold);
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  text-align: center;
 }
-.team__list {
+.team {
   display: flex;
   margin-top: 50px;
+  & &__card + &__card {
+    margin-left: 30px;
+  }
+  &__card {
+    background: var(--second-backlight-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
 }
-.team__list .team__card + .team__card {
-  margin-left: 30px;
-}
-.team__border {
+/ .person--border {
   border-top-style: none;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 .person {
   text-align: center;
+  &__name {
+    font-weight: var(--font-weight-medium);
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+  }
+  &__profession {
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 10px;
+    color: var(--text-color);
+  }
+  &__social-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+  }
+  &__social-icon {
+    fill: currentColor;
+  }
+  &__social-item + &__social-item {
+    margin-left: 10px;
+  }
 }
-.person__name {
-  font-weight: var(--font-weight-medium);
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-}
-.team__card {
-  background: var(--second-backlight-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.person__profession {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-top: 10px;
-  color: var(--text-color);
-}
-.person__social__list {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-.person__social__link {
+.person__social-link {
   width: 44px;
   height: 44px;
   background-color: var(--second-backlight-color);
@@ -67,11 +71,4 @@
     background-color: var(--first-backlight-color);
     color: var(--second-backlight-color);
   }
-}
-
-.person__social__icon {
-  fill: currentColor;
-}
-.person__social__item + .person__social__item {
-  margin-left: 10px;
 }
