--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,6 @@
 img {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
@@ -11,6 +12,10 @@ body {
 }
 
 .sections {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
