--- a/sass/layout/_conditions.scss
+++ b/sass/layout/_conditions.scss
@@ -1,15 +1,10 @@
-.sections-wrap {
-  padding-bottom: 0px;
-}
 .conditions {
   color: var(--headers-dark-color);
-  .conditions__list .conditions__item + .conditions__item {
-    margin-left: 30px;
-  }
-  .conditions__icon {
+
+  &__icon {
     display: flex;
     height: 120px;
-    width: 270px;
+    width: 100%;
     margin-bottom: 30px;
     background: var(--background-filters-button);
     border-radius: 4px;
@@ -17,22 +12,40 @@
     align-items: center;
   }
   &__list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+    }
   }
-  &__list + &__item + &__item {
-    margin-left: 30px;
+
+  &__item {
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-left: 30px;
+    }
   }
+
   &__subtitle {
     font-weight: var(--font-weight-bold);
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
+
+    margin-bottom: 10px;
   }
   &__text {
     line-height: 1.7;
-    width: 270px;
-    margin-top: 10px;
+    width: 100%;
+    margin-bottom: 30px;
     letter-spacing: 0.03em;
     color: var(--text-color);
   }
