--- a/sass/layout/_footer-logo.scss
+++ b/sass/layout/_footer-logo.scss
@@ -1,17 +1,28 @@
 .footer-logo {
-  display: inline-block;
+  display: block;
   font-family: Raleway;
   font-weight: var(--font-weight-bold);
-  font-size: 26px;
-  line-height: 1.19;
-  padding-top: 0px;
+  font-size: 24px;
+  line-height: 1.16;
   margin-bottom: 20px;
+  padding-top: 0px;
   color: var(--first-backlight-color);
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+    text-align: left;
+  }
 }
 .footer-logo__White {
   font-family: Raleway;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   color: var(--text-white-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
