--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,14 +1,23 @@
 .footer {
   background-color: var(--background-color);
+  line-height: 1.19;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  color: var(--text-white-color);
 }
 .address {
+  text-align: center;
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--text-white-color);
+
   &__item {
-    margin-top: 9px;
+    margin-top: 8px;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
   &__list :first-child {
     margin-top: 0px;
@@ -38,14 +47,21 @@
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
-  flex-grow: 1;
-  line-height: 1.19;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  color: var(--text-white-color);
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer-contacts {
-  flex-grow: 1;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+.footer-contacts-wrap {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    flex-grow: 1;
+  }
 }
