--- a/sass/layout/_futer-form.scss
+++ b/sass/layout/_futer-form.scss
@@ -1,22 +1,34 @@
 .footer-form-wrap {
-  margin-left: 93px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 .footer-form {
   color: var(--text-white-color);
   .footer-form__header {
+    text-align: center;
     font-weight: var(--font-weight-bold);
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-top: 60px;
     margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+      margin-top: 0;
+    }
   }
   .footer-form__list {
-    display: flex;
     font-size: 16px;
     line-height: 20px;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
   .footer-form__imail {
-    width: 358px;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
     height: 50px;
     padding-left: 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -25,15 +37,25 @@
     border-radius: 4px;
     background: #2f303a;
     color: #ffffff;
-  }
-  .futer-form__icon {
-    right: 28px;
-    top: 13px;
-    margin-left: 12px;
+    margin-bottom: 20px;
+    @media screen and (min-width: 480px) {
+      width: 358px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
   }
 }
+.futer-form__icon {
+  right: 28px;
+  top: 13px;
+  margin-left: 12px;
+}
+
 .futer-form__button {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 200px;
   height: 50px;
   font-weight: var(--font-weight-bold);
@@ -47,8 +69,6 @@
   border: transparent;
   cursor: pointer;
   margin-left: 12px;
-  justify-content: center;
-  align-items: center;
   transition-property: background;
   transition-duration: var(--timing-hover-focus);
   transition-timing-function: var(--function-hover-focus);
@@ -56,4 +76,8 @@
   &:hover {
     background: var(--btn-fokus);
   }
+}
+.futer-form__button-wrap {
+  display: flex;
+  justify-content: center;
 }
