--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -9,10 +9,22 @@
   text-align: center;
 }
 .team {
-  display: flex;
   margin-top: 50px;
-  & &__card + &__card {
-    margin-left: 30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+  &__card {
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-left: 30px;
+    }
   }
   &__card {
     background: var(--second-backlight-color);
@@ -21,7 +33,7 @@
     border-radius: 0px 0px 4px 4px;
   }
 }
-/ .person--border {
+.person--border {
   border-top-style: none;
   padding-top: 30px;
   padding-bottom: 30px;
