--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
+  margin-bottom: -30px;
+  margin-left: -30px;
   &__item {
     margin-top: 30px;
-    width: 370px;
-    margin-right: 30px;
+    width: 100%;
   }
   &__wrap {
     position: relative;
@@ -26,12 +27,22 @@
     transition: transform var(--timing-hover-focus);
     overflow: auto;
   }
-  &__item:nth-child(3n) {
-    margin-right: 0px;
+  &__item {
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 3 - 30px);
+      margin-left: 30px;
+    }
   }
-  &__item:nth-child(-n + 3) {
-    margin-top: 0px;
+  .project__link--first {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
+
   &__container {
     padding-top: 20px;
     padding-left: 24px;
@@ -40,6 +51,7 @@
     background: var(--second-backlight-color);
     border: 1px solid #eeeeee;
     border-top-style: none;
+    flex-grow: 1;
   }
   &__titl {
     font-weight: var(--font-weight-bold);
