--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/modal";
 @import "./utils/hidden";
 @import "./layout/header";
+@import "./layout/mob-menu";
 @import "./layout/hero";
 @import "./layout/conditions";
 @import "./layout/about";
