--- a/css/main.css
+++ b/css/main.css
@@ -91,12 +91,15 @@ body {
 }
 
 .nav {
-  font-weight: var(--font-weight-medium);
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--heders-dark-color);
-  margin-left: 93px;
+  margin-left: 88px;
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    margin-left: 93px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .nav__list {
@@ -127,10 +130,17 @@ body {
 
 .nav__link {
   font-weight: var(--font-weight-medium);
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--headers-dark-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .nav__item--position {
@@ -171,8 +181,8 @@ body {
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  width: 90vw;
+  min-height: 609px;
   background-color: var(--second-backlight-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -187,6 +197,19 @@ body {
   transition: transform 600ms;
   transition: transform 600ms, -webkit-transform 600ms;
   padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-title {
@@ -324,8 +347,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 14px;
-  line-height: 1.7px;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -338,6 +361,13 @@ body {
 .form-checkbox__input:checked + .form-checkbox__text::before {
   border: none;
   background-image: url(../image/iconcheck.svg);
+}
+
+@media screen and (min-width: 1200px) {
+  .form-checkbox__text {
+    font-size: 14px;
+    line-height: 1.7px;
+  }
 }
 
 .form-checkbox__text::before {
@@ -453,12 +483,9 @@ body {
 }
 
 .contacts__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-weight: var(--font-weight-medium);
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -478,11 +505,18 @@ body {
   color: var(--first-backlight-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
 .contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+  margin-left: 84px;
 }
 
 .contacts__icon {
@@ -490,20 +524,159 @@ body {
   margin-right: 10px;
 }
 
-.contacts .contacts__item + .contacts__item {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+  }
 }
 
 .contacts__icon {
   fill: currentColor;
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts .contacts__item + .contacts__item {
+    margin-left: 30px;
+  }
+}
+
+.mob-container {
+  width: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mob-menu-bottom {
+  position: absolute;
+  margin-bottom: 48px;
+  bottom: 0;
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding-top: 48px;
+  padding-left: 40px;
+}
+
+.mob-menu-nav {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-menu-nav--active {
+  color: #2196f3;
+}
+
+.mob-menu-contacts-item:first-child {
+  margin-bottom: 32px;
+}
+
+.mob-menu-nav-item {
+  margin-bottom: 30px;
+}
+
+.mob-menu-contacts-item {
+  margin-top: 30px;
+  margin-bottom: 64px;
+}
+
+.mob-menu-contacts-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-menu-contacts-link:hover {
+  color: #2196f3;
+}
+
+.menu-close-btn {
+  position: absolute;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: var(--timing-hover-focus);
+          transition-duration: var(--timing-hover-focus);
+  -webkit-transition-timing-function: var(--function-hover-focus);
+          transition-timing-function: var(--function-hover-focus);
+  top: 10px;
+  right: 15px;
+  background-color: #ffffff;
+  border: none;
+}
+
+.menu-close-btn:hover,
+.menu-close-btn:focus .modal__close-icon {
+  fill: var(--first-backlight-color);
+}
+
+.mob-menu-social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mob-menu-social-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mob-menu-social-link-first {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-menu-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-menu-social-list .mob-menu-social-item + .mob-menu-social-item {
+  margin-left: 10px;
+}
+
+.mob-menu-social-link::before {
+  content: "";
+  width: 22px;
+  height: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
   margin-right: 10px;
 }
 
 .hero {
   background-color: var(--background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../image/herobg.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/herobg.jpg);
   background-repeat: no-repeat;
@@ -514,18 +687,40 @@ body {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+  }
+}
+
 .hero__header {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 696px;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
   color: var(--text-white-color);
+}
+
+@media screen and (min-width: 480px) {
+  .hero__header {
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__header {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button {
@@ -548,7 +743,8 @@ body {
   padding-bottom: 10px;
   padding-left: 32px;
   padding-right: 32px;
-  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
   -webkit-transition-property: background;
   transition-property: background;
   -webkit-transition-duration: var(--timing-hover-focus);
@@ -1091,25 +1287,23 @@ body {
 }
 
 .filters {
-  font-size: 16px;
+  margin-top: -15px;
 }
 
 .filters__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-.filters__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (min-width: 768px) {
+  .filters__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .filters__list .filters__item + .filters__item {
@@ -1118,7 +1312,9 @@ body {
 
 .filters__button {
   font-weight: var(--font-weight-medium);
+  font-size: 16px;
   line-height: 1.6;
+  margin-top: 15px;
   letter-spacing: 0.03em;
   cursor: pointer;
   background: var(--background-filters-button);
@@ -1153,12 +1349,13 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 50px;
+  margin-bottom: -30px;
+  margin-left: -30px;
 }
 
 .project__item {
   margin-top: 30px;
-  width: 370px;
-  margin-right: 30px;
+  width: 100%;
 }
 
 .project__wrap {
@@ -1186,12 +1383,29 @@ body {
   overflow: auto;
 }
 
-.project__item:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .project__item {
+    width: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
 }
 
-.project__item:nth-child(-n + 3) {
-  margin-top: 0px;
+@media screen and (min-width: 1200px) {
+  .project__item {
+    width: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+}
+
+.project .project__link--first {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
 }
 
 .project__container {
@@ -1202,6 +1416,9 @@ body {
   background: var(--second-backlight-color);
   border: 1px solid #eeeeee;
   border-top-style: none;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .project__titl {
