--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,10 +1,10 @@
 .nav {
-  font-weight: var(--font-weight-medium);
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--heders-dark-color);
-  margin-left: 93px;
+  margin-left: 88px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
   &__list {
     display: flex;
   }
@@ -25,10 +25,14 @@
   }
   &__link {
     font-weight: var(--font-weight-medium);
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     color: var(--headers-dark-color);
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
   &__item--position {
     position: relative;
