--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
   background-color: var(--background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 100%;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -14,19 +14,37 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+    }
+  }
   &__header {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.6;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    width: 696px;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 30px;
     color: var(--text-white-color);
+    @media screen and (min-width: 480px) {
+      width: 360px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 696px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
+
   &__button {
     display: block;
     justify-content: center;
@@ -44,7 +62,8 @@
     padding-bottom: 10px;
     padding-left: 32px;
     padding-right: 32px;
-    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
     transition-property: background;
     transition-duration: var(--timing-hover-focus);
     transition-timing-function: var(--function-hover-focus);
