--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -86,7 +86,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/header/Header-tab-1x.JPG);
+      url(../image/header/Header-tab-1x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -98,7 +98,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../image/header/Header-tab-2x.JPG);
+        url(../image/header/Header-tab-2x.jpg);
     }
   }
 }
