--- a/css/main.css
+++ b/css/main.css
@@ -147,11 +147,16 @@ body {
   position: relative;
 }
 
+.nav__link--active {
+  color: var(--first-backlight-color);
+}
+
 .nav__link--active::after {
   content: "";
   display: block;
   width: 100%;
   height: 4px;
+  color: var(--first-backlight-color);
   background: #2196f3;
   border-radius: 2px;
   position: absolute;
