--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -37,11 +37,15 @@
   &__item--position {
     position: relative;
   }
+  &__link--active {
+    color: var(--first-backlight-color);
+  }
   &__link--active::after {
     content: "";
     display: block;
     width: 100%;
     height: 4px;
+    color: var(--first-backlight-color);
     background: #2196f3;
     border-radius: 2px;
     position: absolute;
