--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -77,7 +77,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./image/header/Header-mob-2x.jpg);
+      url(../image/header/Header-mob-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -86,7 +86,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./image/header/Header-tab-1x.jpg);
+      url(../image/header/Header-tab-1x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -98,7 +98,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(./image/header/Header-tab-2x.jpg);
+        url(../image/header/Header-tab-2x.jpg);
     }
   }
 }
@@ -108,7 +108,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./image/header/Header-desc-1x.jpg);
+      url(../image/header/Header-desc-1x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -120,7 +120,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(./image/header/Header-desc-2x.jpg);
+        url(../image/header/Header-desc-2x.jpg);
     }
   }
 }
