--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -10,12 +10,14 @@
   &__list &__item + &__item {
     margin-left: 8px;
   }
+  &__item {
+    margin-top: 15px;
+  }
 }
 .filters__button {
   font-weight: var(--font-weight-medium);
   font-size: 16px;
   line-height: 1.6;
-  margin-top: 15px;
   letter-spacing: 0.03em;
   cursor: pointer;
   background: var(--background-filters-button);
